[tool.poetry]
name = "al_strats"
version = "0.1.0"
description = "Collection of Active Learning strategies"
authors = ["OskarLiew <oskar@liew.se>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = "^22.8.0"
pytest = "^7.1.3"
pylint = "^2.15.3"
ipykernel = "^6.15.3"

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]

[tool.pylint]
disable=[
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
    "missing-class-docstring",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
